[gd_scene load_steps=15 format=3 uid="uid://073upcicv7rs"]

[ext_resource type="Script" path="res://scripts/skills/melee.gd" id="1_2on36"]
[ext_resource type="Texture2D" uid="uid://xg7kxeeq8b31" path="res://assets/skills/CrecentSlashWind.png" id="2_rdwk6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xsp20"]
atlas = ExtResource("2_rdwk6")
region = Rect2(0, 0, 125, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_efe7x"]
atlas = ExtResource("2_rdwk6")
region = Rect2(125, 0, 125, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hcis"]
atlas = ExtResource("2_rdwk6")
region = Rect2(250, 0, 125, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjrvu"]
atlas = ExtResource("2_rdwk6")
region = Rect2(375, 0, 125, 110)

[sub_resource type="SpriteFrames" id="SpriteFrames_ditk8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsp20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efe7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hcis")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjrvu")
}],
"loop": true,
"name": &"Basic Attack",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_47rfv"]
size = Vector2(30, 28)

[sub_resource type="Animation" id="Animation_2w7aj"]
resource_name = "Basic Attack"

[sub_resource type="Resource" id="Resource_qx15r"]
metadata/__load_path__ = "res://assets/skills/sprites/spear.png"

[sub_resource type="Animation" id="Animation_sqbg6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("Resource_qx15r")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("RectangleShape2D_47rfv")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(15.0397, 0.0396786)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(15.0397, 0.0396786)]
}

[sub_resource type="Resource" id="Resource_5ibgk"]
metadata/__load_path__ = "res://assets/skills/sprites/spear.png"

[sub_resource type="Animation" id="Animation_34qji"]
resource_name = "Spear Stab"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("Resource_5ibgk")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("RectangleShape2D_47rfv")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(15.0397, 0.0396786), Vector2(45, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(15.0397, 0.0396786), Vector2(45, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p1m2t"]
_data = {
"Basic Attack": SubResource("Animation_2w7aj"),
"RESET": SubResource("Animation_sqbg6"),
"Spear Stab": SubResource("Animation_34qji")
}

[node name="MeleeScene" type="Area2D"]
collision_layer = 32
collision_mask = 16
script = ExtResource("1_2on36")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_ditk8")
animation = &"Basic Attack"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(15.0397, 0.0396786)
rotation = -3.14159

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(15.0397, 0.0396786)
shape = SubResource("RectangleShape2D_47rfv")

[node name="Projectile Lifespan" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p1m2t")
}

[connection signal="area_entered" from="." to="." method="EnemyHit"]
[connection signal="timeout" from="Projectile Lifespan" to="." method="ProjectileTimeout"]
